# Mamoth

./: .gitignore  CMakeLists.txt  LICENSE
include/: functional.hpp
src/functional/: functional.cpp  functional.hpp
src/optimisation/: OptimizationAlgorithm.hpp
src/optimization/: optimizationalgorithm.hpp
